force-app/main/default/objects/PaperProcessing__c/PaperProcessing__c.object-meta.xml
<CustomObject>
    <label>Lavorazione Cartecea</label>
    <nameField>
        <label>Lavorazione Cartecea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lavorazioni Cartecee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>