force-app/main/default/objects/PaperProcessing__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relazione gerarchica con l’oggetto Campagna</description>
    <label>Campagna</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Lavorazioni Cartecee</relationshipLabel>
    <relationshipName>Lavorazioni_Cartecee</relationshipName>
    <type>Lookup</type>
</CustomField>