force-app/main/default/objects/PaperProcessing__c/fields/LastDateReportClienti__c.field-meta.xml
<CustomField>
    <fullName>LastDateReportClienti__c</fullName>
    <description>Data gestita in automatico da Mulesoft</description>
    <label>Data ultima produzione Report Clienti</label>
    <type>Date</type>
</CustomField>