force-app/main/default/objects/PaperProcessing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bozza</fullName>
            </value>
            <value>
                <fullName>Completata</fullName>
            </value>
            <value>
                <fullName>In Corso</fullName>
            </value>
            <value>
                <fullName>File inviato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>