force-app/main/default/objects/PaperProcessing__c/fields/TriggerCustomerReport__c.field-meta.xml
<CustomField>
    <fullName>TriggerCustomerReport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Editato dall’utente.</description>
    <label>Innesco produzione Report Clienti</label>
    <type>Checkbox</type>
</CustomField>